--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
     <link rel="icon" href="images/favicon.ico" sizes="any" />
     <link rel="icon" href="images/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="font/fonts.css" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <h1 class="title">
-      <span>Надо</span><span>сделать</span><span>идеально</span>
-    </h1>
+    <h1 class="title">Надо сделать идеально</h1>
     <video
       src="video/cover-video.mp4"
       class="video"
